H8-Editable-Related-List/objects/H8_ERL_Data__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>