H8-Editable-Related-List/objects/H8_ERL_Data__mdt/fields/Parent_SObject__c.field-meta.xml
<CustomField>
    <fullName>Parent_SObject__c</fullName>
    <inlineHelpText>Use this when declaring the Parent Id field</inlineHelpText>
    <label>Parent Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>SObjectMetaData</relationshipLabel>
    <relationshipName>SObjectMetaData</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>