H8-Editable-Related-List/objects/H8_ERL_Data__mdt/fields/SObjectField__c.field-meta.xml
<CustomField>
    <fullName>SObjectField__c</fullName>
    <label>Child Field</label>
    <metadataRelationshipControllingField>H8_ERL_Data__mdt.SObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>SObjectMetaData</relationshipLabel>
    <relationshipName>SObjectMetaData</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>